fixtures/semantic/invalid/02-vr-c2-duplicate-intent.fl
component DuplicateIntent {
  surface {}

  intent trigger: "one" {
    label: "One"
  }

  intent trigger: "two" {
    label: "Two"
  }
}
